--- a/Cargo.toml
+++ b/Cargo.toml
@@ -275,6 +275,7 @@ too_long_first_doc_paragraph = "allow"
 # https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
 debug = "line-tables-only"
 split-debuginfo = "unpacked"
+incremental = true
 
 # Speed up tests.
 [profile.dev.package]
